--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@ The file name for the description page should be index.html -->
 
     <header>
       <h1 id="headertitle">Game Description for Chess</h1>
-      <img id="headerimage"src="images/chessimage.jpg">
+      <img id="headerimage"src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pawn.jpg">
     </header>
 
     <div class="topnav" id="myTopnav">
-        <a href="chess_table.html" target="_blank">Chess Game</a>
+        <a href="chess_table.html">Chess Game</a>
         <a href="resources.html" target="_blank">Resources</a>
     </div>
 
