--- a/resources.html
+++ b/resources.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>External Resources</title>
+      <link rel="stylesheet" href="css/main.css">
+      <link rel="shortcut icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/Chess_bdt45.svg/1000px-Chess_bdt45.svg.png"/>
+
   </head>
   <body>
     <header>
@@ -10,18 +13,22 @@
 
     <h2>Images</h2>
     <ul>
-      <li><a target="_blank" href="http://res.publicdomainfiles.com/pdf_view/59/13533925813796.png">Favicon</a></li>
-      <li></li>
-      <li></li>
-      <li></li>
-
+      <li><a target="_blank" href="http://res.publicdomainfiles.com/pdf_view/59/13533925813796.png">Favicon King</a></li>
+      <li><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/Chess_bdt45.svg/1000px-Chess_bdt45.svg.png">Favicon Bishop</a></li>
+      <li><a target="_blank" href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Chess_rdt45.svg/1000px-Chess_rdt45.svg.png">Favicon Rook</a></li>
     </ul>
     <h2>Content</h2>
     <ul>
       <li><a target="__blank" href="https://simple.wikipedia.org/wiki/Chess">Game Description</a></li>
-      <li></li>
-      <li></li>
+      <li><a target="_blank" href="https://www.w3schools.com/">W3Schools</a></li>
+        <li><a target="_blank" href="https://www.udemy.com/the-web-developer-bootcamp/learn/v4/overview">Cole Steele- Web Developer Bootcamp</a></li>
+        <li><strong>More Specific on W3Schools</strong></li>
+          <ul>
+            <li><a href="https://www.w3schools.com/cssref/sel_nth-child.asp">Selectors</a></li>
+          </ul>
     </ul>
+
+
 
 </body>
 </html>
