--- a/chess_table.html
+++ b/chess_table.html
@@ -1,97 +1,111 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <title>Chess Table</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="shortcut icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Chess_rdt45.svg/600px-Chess_rdt45.svg.png"/>
+    <link rel="shortcut icon" type="image/png"
+          href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Chess_rdt45.svg/600px-Chess_rdt45.svg.png"/>
 
-  </head>
-  <body>
+</head>
+<body>
 
-    <main class="table">
-      <table>
+<main class="table">
+    <table>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
-      </table>
-    </main>
-  </body>
+    </table>
+    <pre>
+            gameState: {
+
+            "turn": 2,
+            "checkmate": "boolean",
+            "grid": [[A1, B1, C1, D1, E1, F1, G1, H1], [A2, B2, C2, D2, E2, F2, G2, H2],
+                [A3, B3, C3, D3, E3, F3, G3, H3], [A4, B4, C4, D4, E4, F4, G4, H4],
+                [A5, B5, C5, D5, E5, F5, G5, H5], [A6, B6, C6, D6, E6, F6, G6, H6],
+                [A7, B7, C7, D7, E7, F7, G7, H7], [A7, B7, C7, D7, E7, F7, G7, H7],
+                [A8, B8, C8, D8, E8, F8, G8, H8]]
+                }
+
+        </pre>
+</main>
+</body>
 </html>
