Game State Complete
I have finished what I believe is a completed gamestate preview.

--- a/resources.html
+++ b/resources.html
@@ -10,7 +10,6 @@
     <header>
       <h1>External Resources Used for Project</h1>
     </header>
-
     <h2>Images</h2>
     <ul>
       <li><a target="_blank" href="http://res.publicdomainfiles.com/pdf_view/59/13533925813796.png">Favicon King</a></li>
@@ -21,8 +20,10 @@
     <ul>
       <li><a target="__blank" href="https://simple.wikipedia.org/wiki/Chess">Game Description</a></li>
       <li><a target="_blank" href="https://www.w3schools.com/">W3Schools</a></li>
-        <li><a target="_blank" href="https://www.udemy.com/the-web-developer-bootcamp/learn/v4/overview">Cole Steele- Web Developer Bootcamp</a></li>
-        <li><strong>More Specific on W3Schools</strong></li>
+      <li><a target="_blank" href="https://www.udemy.com/the-web-developer-bootcamp/learn/v4/overview">Cole Steele- Web Developer Bootcamp</a></li>
+      <li><a target="_blank" href="https://youtu.be/fKxG8KjH1Qg">Youtube Video</a></li>
+
+      <li><strong>More Specific on W3Schools</strong></li>
           <ul>
             <li><a href="https://www.w3schools.com/cssref/sel_nth-child.asp">Selectors</a></li>
           </ul>
