--- a/chess_table.html
+++ b/chess_table.html
@@ -95,7 +95,11 @@
     </table>
     <pre>
             gameState: {
-
+            "pawns": 16,
+            "rook": 4,
+            "knight": 4,
+            "bishop": 4,
+            "queen": 2,
             "turn": 2,
             "checkmate": "boolean",
             "grid": [[A1, B1, C1, D1, E1, F1, G1, H1], [A2, B2, C2, D2, E2, F2, G2, H2],
